--- a/m_game/package.json
+++ b/m_game/package.json
@@ -7,7 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^0.2.23",
+    "aws-amplify": "^3.3.4",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.18.1",
     "core-js": "^3.6.5",
+    "node-gyp": "^7.1.2",
+    "node-sass": "^4.14.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -19,7 +25,6 @@
     "@vue/cli-plugin-router": "^4.5.0",
     "@vue/cli-plugin-vuex": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
-    "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
