--- a/m_game/package.json
+++ b/m_game/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@aws-amplify/core": "^3.7.0",
     "@aws-amplify/ui-vue": "^0.2.23",
     "aws-amplify": "^3.3.4",
+    "aws-amplify-vue": "^2.1.2",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.18.1",
     "core-js": "^3.6.5",
